--- a/index.html
+++ b/index.html
@@ -117,17 +117,16 @@
                     <img src="img/ewin.jpg" alt="">
                     <div class="contenido-texto-card">
                         <h4>Edwin</h4>
-                        <p>Flower a shop es mi lugar favorito para comprar flores, siempre estoy satisfecho,
-                         ademas son amables, y el lugar es acogedor!</p>
+                        <p>Flower a Shop es mi lugar favorito para comprar flores. Siempre estoy satisfecho, 
+                            además son amables y el lugar es acogedor!.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="img/minion.jpg" alt="">
                     <div class="contenido-texto-card">
                         <h4>Goliat</h4>
-                        <p>Me encanta la creatividad que ponen en cada arreglo, las flores se 
-                         se ven como una obra de arte, y me encanta que siempre me ofrezcan consejos
-                        y recomendaciones para elegir las flores perfectas!</p>
+                        <p>Me encanta la creatividad que ponen en cada arreglo, las flores se ven como una obra de arte. 
+                            Además, me encanta que siempre me ofrezcan consejos y recomendaciones para elegir las flores perfectas.</p>
                     </div>
                 </div>
             </div>
@@ -139,28 +138,23 @@
                     <div class="servicio-ind">
                         <img src="img/servicios 1.jpg" alt="">
                         <h3>Servicios De Arreglos Florales</h3>
-                        <p>1.Arreglos personalizados para ocasiones especiales
-                           (Cumpleaños,bodas,aniversarios).
-                           2.Arreglos de flores frescas para eventos corporativos
-                            y sociales</p>
+                        </p>1. Arreglos personalizados para ocasiones especiales (cumpleaños, bodas, aniversarios).
+2. Arreglos de flores frescas para eventos corporativos y sociales.</p>
                     </div>
                     <div class="servicio-ind">
                         <img src="img/servicios 2.jpg" alt="">
                         <h3>Arreglos de Flores Silvestres</h3>
                         <p>1."Campo de Flores": flores silvestres como margaritas, violetas y tréboles.
 2. "Bosque Encantado": flores y follaje verde con elementos naturales como conchas y piedras.
-3. "Jardín Secreto": flores y hierbas aromáticas como lavanda y romero..</p>
+3. "Jardín Secreto": flores y hierbas aromáticas como lavanda y romero.</p>
                     </div>
                     <div class="servicio-ind">
                         <img src="img/servicios 3.jpg" alt="">
                         <h3>Servicios Exclusivos Y Servicios 
                          de Suscripcion</h3>
-                        <p>1.Exclusivos: diseño de arreglos florales 
-                          personalizados con flores exoticas.
-                          2.Servicio de entrega de flores a domicilio
-                          en el mismo dia, con un mensaje especial.
-                          3.Creacion de arreglos florales para eventos
-                           especiales.
+                        <p>1.Exclusivos: diseño de arreglos florales personalizados con flores exóticas.
+2. Servicio de entrega de flores a domicilio el mismo día, con un mensaje especial.
+3. Creación de arreglos florales para eventos especiales.
                           </p>
                     </div>
                 </div>
@@ -170,7 +164,7 @@
     <footer>
         <div class="contenedor-footer">
             <div class="content-foo">
-                <h4>Phone</h4>
+                <h4>Celular</h4>
                 <p>+52 9211503604</p>
             </div>
             <div class="content-foo">
