--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="contenido-texto-card">
                         <h4>Edwin</h4>
                         <p>Flower a Shop es mi lugar favorito para comprar flores. Siempre estoy satisfecho, 
-                            además son amables y el lugar es acogedor!.</p>
+                            además son amables y el lugar es acogedor.</p>
                     </div>
                 </div>
                 <div class="card">
